// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Response Component should render snapshot when image is available 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-lg-3"
  >
    <button
      class="MuiButtonBase-root makeStyles-root-104"
      tabindex="0"
      type="button"
    >
      <div
        class="makeStyles-imageContainer-105"
      >
        <img
          src="img.png"
        />
      </div>
      <div
        class="MuiGrid-root makeStyles-text-109 MuiGrid-container MuiGrid-wrap-xs-nowrap"
      >
        <div
          class="MuiGrid-root makeStyles-key-108 MuiGrid-item"
        >
          <p
            class="MuiTypography-root makeStyles-type-110 MuiTypography-body1 MuiTypography-colorInherit"
          >
            A
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <p
            class="MuiTypography-root makeStyles-type-110 MuiTypography-body1 MuiTypography-colorInherit"
          >
            example text
          </p>
        </div>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Response Component should render snapshot when image is not available 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <button
      class="MuiButtonBase-root makeStyles-root-257"
      tabindex="0"
      type="button"
    >
      <div
        class="MuiBox-root MuiBox-root-265 makeStyles-key-258"
      >
        <span
          class="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-alignLeft"
        >
          A
        </span>
      </div>
      <div
        class="MuiBox-root MuiBox-root-296 makeStyles-text-260"
      >
        <span
          class="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit MuiTypography-alignLeft"
        >
          example text
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
